--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,45 @@ nav {
 .black {
   background-color: #222;
 }
+
+.crimson-column {
+  width: 23%;
+  min-height: 33rem;
+  background-color: crimson;
+  border: 2px dashed black;
+}
+
+.green-column {
+  width: 47%;
+  min-height: 33rem;
+  background-color: aqua;
+  border: 2px dashed black;
+}
+.small-green-column {
+  width: calc(100% / 4);
+  border: 2px dashed white;
+}
+
+.first-footer-container {
+  justify-content: center;
+  padding: 1rem 0 3rem 0;
+  min-height: 35rem;
+}
+
+.second-footer-container {
+  justify-content: center;
+  align-items: flex-end;
+  min-height: 4rem;
+}
+
+.aquamarine-box {
+  width: 70%;
+  min-height: 3rem;
+  background-color: aquamarine;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer-line {
+  background-color: coral;
+  border: 2px dashed black;
+}
